Add JWT authorization and update posts service security